tenants/platform/services/headlamp/postInstall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - dashboard.jdwlabs.com
  rules:
    - backendRefs:
        - name: platform-headlamp
          port: 80
