tenants/platform/services/headlamp/postInstall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.jdwlabs.com
      secretName: headlamp-tls
  rules:
    - host: dashboard.jdwlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-headlamp
                port:
                  number: 80
